# solana.wallet.discord.bot

./: .gitignore  Dockerfile  config.json.sample  docker-compose.yaml  readme.md
.github/workflows/: deploy-docker.yml
bot/: Cargo.toml  config.json.sample
bot/src/: bot.rs  main.rs
bot/src/commands/: accounts.rs  address.rs  balance.rs  config.rs  help.rs  mod.rs  ping.rs  store.rs  wallet.rs
bot/src/tasks/: mod.rs  update_nickname.rs  update_wallet.rs
libs/birdseyeapi/: Cargo.toml
libs/birdseyeapi/src/: birdseye_pirce.rs  birdseyeapi.rs  lib.rs
libs/configuration/: Cargo.toml
libs/configuration/src/: configuration.rs  helper.rs  lib.rs
libs/solana_wallet/: Cargo.toml
libs/solana_wallet/src/: lib.rs  wallet.rs
libs/solana_wallet/src/token_lists/: mod.rs  token_list_solflare.rs  token_list_staratlas.rs
libs/solana_wallet/tests/: test_wallet.rs
libs/tx_scanner/: Cargo.toml
libs/tx_scanner/src/: lib.rs  mapped_tx.rs  tx_scanner.rs
libs/wallet/: Cargo.toml
libs/wallet/src/: account_details.rs  accounts_details.rs  lib.rs  solana.rs  wallet.rs
