[package]
name = "tx_scanner"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4.19"
test-env-log = "0.2.8"
dotenv = "0.15.0"
env_logger = "0.10.0"
anyhow = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assert_json = "0.1.0"
solana-client = "1.16.0"
solana-program = "1.16.0"
solana-transaction-status = "1.16.0"

solana-sdk = "1.16.0"
spl-token = "3.5.0"
bs58 = "0.5.0"
configuration = { path = "../configuration" }
